2012-06-01 release v2.0.7(erylee): errdb_http.erl replace 'get(path)' with 'get(raw_path)'

2012-06-01 release v2.0.6(erylee): fix critical DbDir bug.

2012-05-23 release v2.0.5(erylee): fix random:uniform

2012-05-16 release v2.0.4(erylee): evmon to replace errdb_monitor, add errdb_client:start_link/2

2012-02-27 release v0.6.0(erylee): api changes to ensure metrics of one object in the same file

2012-02-15 release v0.5.0(erylee): use rebar to compile and release

2011-08-15 release v0.4.2(erylee): support errdb ruby clients and fix errdb_socket

2011-08-04 release v0.4.1(erylee): fix float precision bug

2011-07-03 release v0.4.0(erylee): errdb_journal cluster

2011-07-03 release v0.3.1(erylee): add pool_size config.

2011-06-05 release v0.3.0(erylee): binary round robin format

2011-06-04 release v0.2.1(erylee): use chash_pg to start 4 errdb

2011-06-04 release v0.2.0(erylee): rewrite with erlang

2011-05-04 release v0.1.2(erylee)

2011-04-22 clone from redis(erylee)
