@@ -24,5 +24,5 @@
         {journal, [{dir, "var/journal"}, {buffer, 100}]}
     ]},
     {socket, [{ip, "0.0.0.0"}, {port, 7272}]},
-    {httpd, [{ip, "0.0.0.0"}, {port, 8080}]}]}
+    {httpd, [{ip, "0.0.0.0"}, {port, 9090}]}]}
 ].
